# GJDesktop

./: .gitignore  BUILD_STATUS.md  CMakeLists.txt  COMPILATION_STATUS.md  FINAL_ACCEPTANCE_GUIDE.md  FIXES_SUMMARY.md  GITHUB_GUIDE.md  OBSOLETE_FILES.md  PHASE6_BUILD_GUIDE.md  PHASE6_CODE_CHANGES.md  PHASE6_SUMMARY.md  QUICK_START.md  QUICK_VERIFY.md  UI_CLOSED_LOOP_REPORT.md  VERIFICATION_GUIDE.md  build.bat  build.ps1  build_output.txt  requirements.txt  test_logger.cpp
.github/workflows/: build.yml
.workbuddy/brain/3b0de3fd7f644cb8a944166f6ef94c29/: CCDesk功能总结.md  Qt_MSVC_兼容性检查与修复方案.md  完整代码修复验证.md  桌面整理功能名实相符修复方案.md  桌面自动整理v1实现总结.md  桌面自动整理链深度修复报告.md  真正自动整理桌面图标功能-第一轮实现汇报.md
.workbuddy/memory/: 2026-03-21.md  2026-03-22.md
src/: engine.py  main.cpp  style.py  widgets.py
src/core/: app_manager.cpp  app_manager.h  config_manager.cpp  config_manager.h  desktop_arrange_rule_engine.cpp  desktop_arrange_rule_engine.h  desktop_auto_arrange_service.cpp  desktop_auto_arrange_service.h  desktop_icon_accessor.cpp  desktop_icon_accessor.h  desktop_icon_writer.cpp  desktop_icon_writer.h  desktop_layout_manager.cpp  desktop_layout_manager.h  desktop_layout_planner.cpp  desktop_layout_planner.h  desktop_snapshot_types.h  file_organizer.cpp  file_organizer.h  logger.cpp  logger.h  organize_result.h  snapshot_manager.cpp  snapshot_manager.h  tray_manager.cpp  tray_manager.h
src/ui/: main_window.cpp  main_window.h  partition_widget.cpp  partition_widget.h  settings_dialog.cpp  settings_dialog.h
